2008-04-15	Guido Diepen	<guido@guidodiepen.nl>
	
	* Update the program to work with python-qt4.4.0 and greater. Just
	work-around the issues with autoconnecting of slots/signals

2008-04-15	Guido Diepen	<guido@guidodiepen.nl>
	
	* When the application is minimized, only show tray balloon message in in
	case of no bound partnerships. When application is shown, notify user with
	a dialog box (this will also be shown when app was iconified and gets
	activated later)
	* Upped version to 0.11.1 

2008-03-30	Guido Diepen	<guido@guidodiepen.nl>
	
	* Updated the partnership listing code. It will handle both the old and
	the new API of sync-engine (i.e. with or without Exchange partnerships)
	* Updated small forgotten update of counter variable. Now also on the
	ActiveSync Status screens all partnerships should be shown nicely.

2008-03-24	Guido Diepen	<guido@guidodiepen.nl>
	
	* Added splashscreen
	* Added error handling when creating partnerships. Sometimes sync-engine
	tries to rebind certain dtpt ports after creating new pship
	* Added ActiveSync status information to the mainscreen. When an
	activesync is active, the screen will show (almost) the same information
	as the screen on the device
	* Updated the placements of the different screens. Now they are all placed
	centrally over the mainwindow
	* Fixed typo in partnership creation screen
	* Start listening to the PartnershipsChanged signal emitted by sync-engine
	* Made items in partnership-creation window non-editable

2008-03-23	Guido Diepen	<guido@guidodiepen.nl>
	
	* Now also progress of the sync process is shown with progressbar
	* Small code fixes

2008-03-23	Guido Diepen	<guido@guidodiepen.nl>

	* Major rewrite into two separate components, one GUI component and one
	  dataserver component. These both run in their own separate proces,
	  meaning we don't have any problems with the threading within python
	  anymore.
	* Added support for listening to Status events generated when ActiveSync